// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`!leaderboard callback returns correct output 1`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 2`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 3`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "3 - user102 [998 points] 
4 - user103 [997 points] 
",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 4`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 5`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 6`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 7`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 8`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 9`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 10`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 11`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "3 - user102 [998 points] 
4 - user103 [997 points] 
",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 12`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 13`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 14`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 15`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 16`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": null,
      "fields": Array [
        Object {
          "inline": false,
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Leaderboard",
      "type": "rich",
      "url": null,
    },
  ],
}
`;
